@@ -1,5 +1,13 @@
 2014-05-23  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* BrowserWindow.h:
+	* BrowserWindow.cpp:
+	* BrowserWindow.xml:
+	* X3DBrowserWindowInterface.h:
+	* X3DBrowserWindowInterface.cpp: 
+
+2014-05-23  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* BrowserWindow.cpp: 
 
 2014-05-23  Holger Seelig  <holger.seelig@yahoo.de>
